<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.udacity.shoestore.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_default_margin"
        android:background="@color/primaryColor">

        <TextView
            android:id="@+id/store_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/store_name"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="@id/login_edit"
            app:layout_constraintEnd_toStartOf="@id/store_slogan_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/store_logo" />

        <TextView
            android:id="@+id/store_slogan_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/store_slogan"
            android:textAlignment="textStart"
            app:layout_constraintBaseline_toBaselineOf="@+id/store_name_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/store_name_text"
            style="@style/store_slogan_logo" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/login_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/password_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/login_edit" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            app:layout_constraintTop_toBottomOf="@id/login_edit"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/login_edit"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/primaryDarkColor"/>

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="15sp"
            android:textColor="@color/primaryTextColor"
            android:clickable="true"
            android:layout_marginTop="@dimen/layout_default_margin"
            android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>