<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InstructionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/question_mark_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_mark"
            android:textSize="270sp"
            android:textColor="@color/accentColor"
            android:fontFamily="sans-serif-black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/instruction_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_title"
            android:textSize="24sp"
            android:textColor="@color/accentColor"
            android:layout_marginTop="@dimen/layout_default_margin"
            android:fontFamily="@font/roboto"
            app:layout_constraintTop_toBottomOf="@id/question_mark_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/instruction_content_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_content"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/layout_default_margin"
            android:paddingHorizontal="@dimen/layout_default_margin"
            android:justificationMode="inter_word"
            android:fontFamily="@font/roboto"
            app:layout_constraintTop_toBottomOf="@id/instruction_title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:background="@color/primaryDarkColor"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/button_style"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>