<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WelcomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        using a guideline to balance positioning-->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6"/>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/logo_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            android:text="@string/welcome"
            style="@style/store_logo"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_name"
            app:layout_constraintTop_toBottomOf="@id/welcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/slogan_text"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_margin="16dp"
            style="@style/store_logo"/>

        <TextView
            android:id="@+id/slogan_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_slogan"
            app:layout_constraintBaseline_toBaselineOf="@id/logo_text"
            app:layout_constraintStart_toEndOf="@id/logo_text"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/store_slogan_logo"/>

        <Button
            android:id="@+id/instructions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/primaryDarkColor"
            android:textColor="@color/textColor"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>